Expand pattern model and service

--- a/src/PatronProPartage/Pages/Patterns.razor
+++ b/src/PatronProPartage/Pages/Patterns.razor
@@ -18,6 +18,6 @@
 
     protected override async Task OnInitializedAsync()
     {
-        _patterns = await PatronService.GetPublicPatternsAsync();
+        _patterns = await PatronService.GetAllAsync();
     }
 }
