--- a/src/PatronProPartage/Pages/_Host.cshtml
+++ b/src/PatronProPartage/Pages/_Host.cshtml
@@ -12,11 +12,13 @@
     <title>PatronProPartage</title>
     <base href="~" />
     <link href="css/site.css" rel="stylesheet" />
+    <link href="_content/MudBlazor/MudBlazor.min.css" rel="stylesheet" />
 </head>
 <body>
     <app>
         <component type="typeof(App)" render-mode="ServerPrerendered" />
     </app>
     <script src="_framework/blazor.server.js"></script>
+    <script src="_content/MudBlazor/MudBlazor.min.js"></script>
 </body>
 </html>
