--- a/src/PatronProPartage/Shared/MainLayout.razor
+++ b/src/PatronProPartage/Shared/MainLayout.razor
@@ -1,5 +1,6 @@
 @inherits LayoutComponentBase
 
+<MudThemeProvider>
 <MudLayout>
     <MudAppBar Color="Color.Primary" Elevation="1">
         <MudText Typo="Typo.h6">PatronProPartage</MudText>
@@ -13,3 +14,4 @@
         @Body
     </MudMainContent>
 </MudLayout>
+</MudThemeProvider>
